# cs-545-model-training

./: hello.py  pyproject.toml
